<resources>

    <string name="app_name">Mahalla Delivery</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigations_drawer_open">Open navigation drawer</string>
    <string name="navigations_drawer_Close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_restaurant">Restaurant</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_food_list">Food List</string>

    <string name="warn"> if you want to change your number you have to make a new account</string>
    <string name="Phone_number">Phone number</string>

    <string name="popular_categories">Common </string>
    <string name="popular_categories2">Food</string>
    <string name="best_deals">Recommended</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_menu">Menu</string>
    <string name="menu_view_orders">View Orders</string>

    <string name="size">Size</string>
    <string name="add_on">Addon</string>
    <string name="action_clear_cart">Clean Cart</string>
    <string name="action_search">Search</string>
    <string name="sign_out">Sign Out</string>
    <string name="update_info">Update Info</string>

    <string name="Large_text">"Mahalla Delivery is an Android application to facilitate your life and make it easier and quicker concerning ordering food in our town, We hope your experience is well and that you are happy with our app.
Mahalla Delivery is brought to you by DIMITS Developer team , for any problems , issues or any bugs please go to Contact us navigation and tell us about your complaint or suggestions , Thank you for using our app.\n
We believe that this town deserves more improvements and services , so our goal is to fulfill the electronic need here as a part of this town , and we will not stop supporting our applications with continuous updates , improvements and resolving bugs and issues\n
Why us ?
We are trying to be different from other competitors so we are concentrating on the speed and saving factors , so we are going to send you notifications about new offers and discounts from different restaurants."\n\n

      We are concentrating on the every small detail in the app and try to give you a feedback on any action you make with our app to improve your user experience with our app so please if you found our app interesting or something like that , do not hesitate to give us a good rating on the play store and tell your family and friends about our app , this helps us greatly to continue work on other apps and keep your experience better by time.


</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB1PW-fiBSduZXFAfVMpqkErO9U3rgbRLs</string>


</resources>
