<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/restaurant_group">
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_restaurant" />
    </group>




    <group >
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/update_info" />
    </group>

      <item
        android:id="@+id/nav_about_us"
        android:icon="@drawable/ic_info_black_24dp"
        android:iconTint="@android:color/white"
        android:title="About Us" />

    <group >
      <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_phone_black_24dp"
        android:iconTint="@android:color/white"
        android:title="Contact Us" />
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>
