<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@android:color/white"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/best_deals"
            android:textColor="#121212"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <com.asksira.loopingviewpager.LoopingViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isInfinite="true"
                app:autoScroll="true"
                app:scrollInterval="5000"
                app:viewpagerAspectRatio="1.33"/>

        </LinearLayout>
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/popular_categories"
                android:textColor="#121212"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@+id/common"
                android:fontFamily="sans-serif-thin"
                android:text="@string/popular_categories2"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_below="@+id/common"
                android:id="@+id/recycler_popluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-light"
            android:text="Menu"
            android:textColor="#121212"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</ScrollView>